--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
   id 'com.android.application'
+  id 'com.google.gms.google-services'
 }
 
 apply plugin: "androidx.navigation.safeargs"
@@ -8,11 +9,11 @@ android {
   compileSdkVersion 34
 
     defaultConfig {
-    applicationId "androidsamples.java.tictactoe"
-    minSdkVersion 21
-    targetSdkVersion 34
-    versionCode 1
-    versionName "1.0"
+      applicationId "androidsamples.java.tictactoe"
+      minSdkVersion 21
+      targetSdkVersion 34
+      versionCode 1
+      versionName "1.0"
 
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
@@ -42,4 +43,6 @@ dependencies {
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.2.1'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+
+  implementation 'com.google.firebase:firebase-auth:22.1.0'
 }
