--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.2'
-
+        classpath 'com.android.tools.build:gradle:8.6.0'
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.8.2"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
