--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,8 @@ dependencies {
   implementation 'androidx.navigation:navigation-ui:2.8.2'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation 'androidx.recyclerview:recyclerview:1.3.2'
-  testImplementation 'junit:junit:4.13.2'
+    implementation 'com.google.firebase:firebase-database:21.0.0'
+    testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.2.1'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
