--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 apply plugin: "androidx.navigation.safeargs"
 
 android {
-  compileSdkVersion 34
+  compileSdkVersion 35
 
     defaultConfig {
       applicationId "androidsamples.java.tictactoe"
@@ -40,10 +40,20 @@ dependencies {
   implementation 'androidx.navigation:navigation-ui:2.8.2'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'com.google.firebase:firebase-database:21.0.0'
-    testImplementation 'junit:junit:4.13.2'
+  implementation 'com.google.firebase:firebase-database:21.0.0'
+  testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.2.1'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
   implementation 'com.google.firebase:firebase-auth:22.1.0'
+}
+
+dependencies {
+  // AndroidX Test dependencies
+  androidTestImplementation 'androidx.test:core:1.5.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+  androidTestImplementation 'androidx.fragment:fragment-testing:1.6.2'
+  androidTestImplementation 'androidx.navigation:navigation-testing:2.7.6'
+  androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
 }
