Added Unit Tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,10 @@ dependencies {
   androidTestImplementation 'androidx.fragment:fragment-testing:1.6.2'
   androidTestImplementation 'androidx.navigation:navigation-testing:2.7.6'
   androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+  testImplementation 'junit:junit:4.13.2'
+  testImplementation 'org.mockito:mockito-core:4.7.0'
+  testImplementation 'org.mockito:mockito-inline:4.7.0'
+  testImplementation 'androidx.arch.core:core-testing:2.1.0'
+  testImplementation 'org.mockito:mockito-android:4.7.0'
 }
+
